update source for complete sign-up
